--- a/index.html
+++ b/index.html
@@ -1,49 +1,17 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DDCC设计工作室 - 暗黑星际风格</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="stars"></div>
-    <div class="nebula"></div>
-    <header>
-        <h1>DDCC设计工作室</h1>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="#home" class="active">首页</a></li>
-                <li class="dropdown">
-                    <a href="#services" class="dropdown-toggle">服务</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="services/brand.html">品牌设计</a></li>
-                        <li><a href="services/ui.html">UI/UX设计</a></li>
-                        <li><a href="services/3d.html">3D可视化</a></li>
-                        <li><a href="services/motion.html">动态设计</a></li>
-                    </ul>
-                </li>
-                <li><a href="works.html">作品展示</a></li>
-                <li><a href="about.html">关于我们</a></li>
-                <li class="dropdown">
-                    <a href="#insights" class="dropdown-toggle">行业洞察</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="insights/blog.html">设计博客</a></li>
-                        <li><a href="insights/case-studies.html">案例研究</a></li>
-                        <li><a href="insights/trends.html">设计趋势</a></li>
-                    </ul>
-                </li>
-                <li><a href="contact.html">联系我们</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="home" class="hero">
-            <h2>探索设计的星际边界</h2>
-            <p>我们用创意点亮黑暗宇宙</p>
-            <a href="#contact" class="btn">开始合作</a>
-        </section>
-    </main>
-    <script src="main.js"></script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stellar Design Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
